Don't create topic and subscriptions

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -3,7 +3,51 @@ nodaemon=true
 
 [program:project_created]
 command=/app/redirect
-environment=SB_TOPIC=serviceproject-created-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=test_peter
+environment=SB_TOPIC=serviceproject-setup-persisted-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=Dept/PMP/Project
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:budget_created]
+command=/app/redirect
+environment=SB_TOPIC=servicebudget-setup-persisted-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=Dept/PMP/Budget
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:budget_period_created]
+command=/app/redirect
+environment=SB_TOPIC=servicebudget-period-setup-persisted-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=Dept/PMP/BudgetPeriod
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:project_employee_change]
+command=/app/redirect
+environment=SB_TOPIC=serviceproject-employees-changed-persisted-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=Dept/PMP/ProjectUser
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:client_created]
+command=/app/redirect
+environment=SB_TOPIC=serviceclient-setup-persisted-topic,SB_SUBSCRIPTION=PMPUpdate,DEST_EXCHANGE=Dept/PMP/Client
 user=root
 directory=/app
 redirect_stderr=true
