S156 Project activated / removed forwards

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -55,3 +55,26 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 auto_start=true
 autorestart=true
+
+
+[program:project_removed]
+command=/app/redirect
+environment=SB_TOPIC=project-deactivated-persisted-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/ProjectRemoved
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:project_reactivated]
+command=/app/redirect
+environment=SB_TOPIC=project-activated-persisted-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/ProjectReactivated
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
