S158 Listen to both versions of queue

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -78,3 +78,83 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 auto_start=true
 autorestart=true
+
+
+[program:project_created2]
+command=/app/redirect
+environment=SB_TOPIC=project-setup-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/Project
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:budget_created2]
+command=/app/redirect
+environment=SB_TOPIC=media-budget-setup-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/Budget
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:budget_period_created2]
+command=/app/redirect
+environment=SB_TOPIC=media-budget-period-setup-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/BudgetPeriod
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:project_employee_change2]
+command=/app/redirect
+environment=SB_TOPIC=project-employees-changed-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/ProjectUser
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:client_created2]
+command=/app/redirect
+environment=SB_TOPIC=client-setup-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/Client
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+
+[program:project_removed2]
+command=/app/redirect
+environment=SB_TOPIC=project-deactivated-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/ProjectRemoved
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
+[program:project_reactivated2]
+command=/app/redirect
+environment=SB_TOPIC=project-activated-topic,SB_SUBSCRIPTION=asbforwardtoolmaster,DEST_EXCHANGE=Dept/Apps/ProjectReactivated
+user=root
+directory=/app
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+auto_start=true
+autorestart=true
+
